--- a/Docker/index.html
+++ b/Docker/index.html
@@ -13,7 +13,7 @@ body {
 }
 div.info {
   display: table;
-  background: #04C9E8;
+  background: #34C904;
   padding: 20px 20px 20px 20px;
   border: 1px dashed black;
   border-radius: 10px;
